# array

./: .gitignore  CMakeLists.txt  Makefile  README.md  allocex.c  array.c  array.h  ex.c  slicex.c  strex.c
examples/: allocex.c  custallex.c  ex.c  slicex.c  strex.c
include/: array.h
src/: array.c
